# parallels-hw

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yaml
benchmark/: analysis.md  result.txt  time-bench.py
include/: pthreads-conv.h  types.h  utils.h
include/pct/: filters.h  parallel-conv.h  pthreads-conv.h  serial-conv.h  utils.h
scripts/: ci-style-check.sh  format.sh  run-tests.sh
src/: 1.c  CMakeLists.txt  filters.c  main.c  parallel-conv.c  pthreads-conv.c  serial-conv.c  utils.c
src/pct/: filters.c  parallel-conv.c  pthreads-conv.c  serial-conv.c  utils.c
tests/: CMakeLists.txt  parallel-conv.c  serial-conv.c  test-runner.c  utils.c  utils.h
